bad/method_call_before_definition_with_invalid_arg_type.example_compiler_output
ERROR
[1mbad/method_call_before_definition_with_invalid_arg_type.lat:11:11: [1;31merror: [0;1mUnknown class: X[m
	void foo(X x) {}
	         [1;32m^[m
